@@ -3,34 +3,40 @@ import risclog.sqlalchemy.testing
 import risclog.sqlalchemy.serializer
 
 
+@pytest.yield_fixture
 @pytest.fixture(scope='session')
-def database_1(request):
-    return risclog.sqlalchemy.testing.database_fixture_factory(
-        request, 'risclog.sqlalchemy.db1', 'db1')
+def database_1():
+    yield from risclog.sqlalchemy.testing.database_fixture_factory(
+        'risclog.sqlalchemy.db1', 'db1')
 
 
+@pytest.yield_fixture
 @pytest.fixture(scope='session')
-def database_2(request):
-    return risclog.sqlalchemy.testing.database_fixture_factory(
-        request, 'risclog.sqlalchemy.db2', 'db2')
+def database_2():
+    yield from risclog.sqlalchemy.testing.database_fixture_factory(
+        'risclog.sqlalchemy.db2', 'db2')
 
 
+@pytest.yield_fixture
 @pytest.fixture(scope='function', autouse=True)
-def database_test_livecycle(request, database_1, database_2):
+def database_test_livecycle(database_1, database_2):
     """Make sure each test gets a clean database + session."""
-    return risclog.sqlalchemy.testing.database_test_livecycle_fixture_factory(
-        request)
+    yield from (
+        risclog.sqlalchemy.testing.database_test_livecycle_fixture_factory())
 
 
-def patched_serializer(request):
+@pytest.yield_fixture
 @pytest.fixture(scope='function')
+def patched_serializer():
     """Patch pyramid serializer to be able to serialize Decimal and Datetime."""
     risclog.sqlalchemy.serializer.patch()
-    request.addfinalizer(risclog.sqlalchemy.serializer.unpatch)
+    yield
+    risclog.sqlalchemy.serializer.unpatch()
 
 
+@pytest.yield_fixture
 @pytest.fixture(scope='function')
-def test_model(request):
+def test_model():
     """Create testmodel for test_serializer."""
     from sqlalchemy import Column, Text
     import risclog.sqlalchemy.model
@@ -44,10 +50,7 @@ def test_model(request):
         __tablename__ = 'foo'
         foo = Column(Text, primary_key=True)
 
-    def unregister_model():
-        risclog.sqlalchemy.db.unregister_class(Object)
-
     test_object = ExampleModel()
     test_object.foo = u'bar'
-    request.addfinalizer(unregister_model)
-    return test_object
+    yield test_object
+    risclog.sqlalchemy.db.unregister_class(Object)
